--- a/webagence/src/css/index.css
+++ b/webagence/src/css/index.css
@@ -90,13 +90,13 @@ header {
   display: table;
   clear: both;
 }
-.course {
+.work {
   margin-bottom: 1em;
 }
 
 /* IMAGES -------- */
 
-.course-img {
+.work-img {
   width: 70px;
 }
 .teacher-img {
@@ -126,13 +126,13 @@ header {
 
 /* WORKS NAV -------- */
 
-.course-nav li {
+.work-nav li {
   display: inline-block;
 }
-.course-nav li + li {
+.work-nav li + li {
   margin-left: 0.6em;
 }
-.course-nav a {
+.work-nav a {
   font-size: 0.85em;
   color: #7d7d7d;
   padding: 0.2em 0.8em;
@@ -140,8 +140,8 @@ header {
   background: #eaebeb;
   transition: 0.2s;
 }
-.course-nav a:hover,
-.course-nav a.active {
+.work-nav a:hover,
+.work-nav a.active {
   color: #fff;
   background: #39add1;
 }
@@ -186,10 +186,10 @@ header {
   .main-nav a:hover {
     border-color: rgba(0, 0, 0, 0.1);
   }
-  .courses h2 {
+  .work h2 {
     margin-bottom: 0;
   }
-  .course-nav {
+  .work-nav {
     display: block;
     margin: 1.5em 0 3.2em;
   }
@@ -249,10 +249,10 @@ header {
   }
 
   /* WORKS NAV -------- */
-  .course-nav {
+  .work-nav {
     float: right;
   }
-  .courses h2 {
+  .work h2 {
     float: left;
   }
 }
