--- a/webagence/src/css/index.css
+++ b/webagence/src/css/index.css
@@ -11,12 +11,12 @@
 * {
   box-sizing: border-box;
 }
-body {
+/* body {
   color: #576366;
   background: #5fcf80;
   margin: 0;
   font-family: "Roboto", sans-serif;
-}
+} */
 h1,
 h2,
 ul {
@@ -48,7 +48,7 @@ hr {
 input,
 button {
   padding: 0.5em;
-  font-size: 0.9em;
+  font-size: 0.95em;
   margin-right: 10px;
   border: none;
   border-radius: 3px;
