--- a/webagence/src/css/DarkMode.css
+++ b/webagence/src/css/DarkMode.css
@@ -31,7 +31,7 @@ body.light {
 
 body.dark {
   --background-color: var(--blue);
-  --text-color: var(--blue);
+  --text-color: var(--white);
   --font-weight: 500;
 }
 
@@ -40,4 +40,15 @@ body {
   color: var(--text-color);
   font-weight: var(--font-weight);
   transition: background 0.3s ease-in-out, color 0.6s ease-in-out;
+}
+
+.container {
+  background: var(--background-color);
+  color: var(--text-color);
+}
+
+nav a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--background-color);
 }
